fixed max height causing content to be cut off

--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -171,7 +171,7 @@ nav {
   border-radius: 15px;
   overflow: hidden;
   transition: max-height 0.5s ease, padding 0.5s ease;
-  max-height: 100vh;
+  max-height: 150vh;
   margin-bottom: 20px;
 }
 
